--- a/ClassFinder/nbproject/project.properties
+++ b/ClassFinder/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/ClassFinder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jsoup-1.7.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,5 +73,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3-sources.jar
 src.dir=src
 test.src.dir=test
