--- a/ClassFinder/nbproject/project.properties
+++ b/ClassFinder/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${libs.CopyLibs.classpath}:\
     ${file.reference.jsoup-1.7.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -73,6 +74,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3-sources.jar
 src.dir=src
 test.src.dir=test
