--- a/ClassFinder/nbproject/project.properties
+++ b/ClassFinder/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/ClassFinder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.CopyLibs.classpath}:\
-    ${file.reference.jsoup-1.7.3.jar}
+    ${file.reference.jsoup-1.7.3.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
