--- a/ClassFinder/nbproject/project.properties
+++ b/ClassFinder/nbproject/project.properties
@@ -34,9 +34,9 @@ file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.CopyLibs.classpath}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jsoup-1.7.3.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${libs.CopyLibs.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
