--- a/ClassFinder/nbproject/project.properties
+++ b/ClassFinder/nbproject/project.properties
@@ -29,13 +29,19 @@ dist.jar=${dist.dir}/ClassFinder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.async-http-client-1.8.3.jar=lib/async-http-client-1.8.3.jar
 file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
+file.reference.slf4j-api-1.7.6.jar=lib/slf4j-api-1.7.6.jar
+file.reference.slf4j-simple-1.7.6.jar=lib/slf4j-simple-1.7.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.async-http-client-1.8.3.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jsoup-1.7.3.jar}:\
+    ${file.reference.slf4j-api-1.7.6.jar}:\
+    ${file.reference.slf4j-simple-1.7.6.jar}:\
     ${libs.CopyLibs.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
